# mathjax-c

./: .gitignore  CMakeLists.txt  README.md  comparison.html
comparison_all/: cases.json  index.html
comparison_market/: cases.json  index.html
include/: ast.h  font.h  font_data.h  kitty.h  layout.h  mathjax.h  parser.h  render.h
scripts/: generate_market_gallery.js  generate_test_gallery.js  setup.sh
src/: api.c
src/ast/: factory.c  node.c  visitor.c
src/font/: font.c  glyph.c  metrics.c  stix_data.c
src/kitty/: kitty.c
src/layout/: box.c  fractions.c  math.c  matrix.c  radicals.c  scripts.c  spacing.c
src/parser/: environments.c  lexer.c  macros.c  parser.c  symbols.c
src/render/: bitmap.c  draw.c
test/diff/: cases.json  index.html
tools/: mathjax-cli.c  test.sh
